@@ -1,4 +1,4 @@
-Copyright (c) 2016 Neven Boyanov, Tinusaur Team. All Rights Reserved.
+Copyright (c) 2018 Neven Boyanov, Tinusaur Team. All Rights Reserved.
 
 Permission is hereby granted, free of charge, to any person obtaining a copy 
 of this software and associated documentation files (the "Software"), to deal 
