@@ -1,6 +1,11 @@
 CHANGES
 
 
+2019-02-03 (nb)
+
+FIX: used wrong function - *_start/stop instead of *data_start/stop.
+
+
 2019-01-27 (nb)
 
 Minor source code reformatting.
